Style: Set the font to ubuntu
Signed-off-by: jooojub <jooojub@gmail.com>

--- a/_sass/_general.scss
+++ b/_sass/_general.scss
@@ -8,7 +8,7 @@ button,
 input,
 select,
 textarea {
-    font-family: monospace, 'Lato', Calibri, 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-family: 'Lato', monospace, Calibri, 'Helvetica Neue', Helvetica, Arial, sans-serif;
 }
 
 body {
