--- a/css/style/monokai-sublime.css
+++ b/css/style/monokai-sublime.css
@@ -108,3 +108,7 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
 .hljs-custom_keywords {
   color: #ae81ff;
 }
+
+.hljs-address {
+  color: #a6e22e;
+}
