--- a/_includes/head.html
+++ b/_includes/head.html
@@ -34,6 +34,7 @@
 
 <!-- For all browsers -->
 <link rel="stylesheet" href="{{ site.url }}/assets/css/main.css">
+<link rel="stylesheet" href="{{ site.url }}/assets/css/monokai-sublime.css">
 <!-- Webfonts -->
 <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic" rel="stylesheet" type="text/css">
 
@@ -41,6 +42,8 @@
 
 <!-- Load Modernizr -->
 <script src="{{ site.url }}/assets/js/vendor/modernizr-2.6.2.custom.min.js"></script>
+<script src="{{ site.url }}/assets/js/highlight.pack.js"></script>
+<script> hljs.initHighlightingOnLoad();</script>
 
 <!-- Icons -->
 <!-- 16x16 -->
