--- a/assets/css/monokai-sublime.css
+++ b/assets/css/monokai-sublime.css
@@ -112,3 +112,7 @@ Monokai Sublime style. Derived from Monokai by noformnocontent http://nn.mit-lic
 .hljs-address {
   color: #a6e22e;
 }
+
+pre {
+  tab-size: 2;
+}
